// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/browserify.js factor-bundle should avoid outputting empty css files by default 1`] = `
"/* packages/browserify/test/specimens/folder/folder.css */
.mcd19f1319_folder { margin: 2px; }
"
`;

exports[`/browserify.js factor-bundle should avoid outputting empty css files by default 2`] = `
"/* packages/browserify/test/specimens/local.css */
.mcc4e2a8e1_booga { background: green; }
/* packages/browserify/test/specimens/start.css */
.mc1c78395f_booga { color: red; background: blue; }
.mc1c78395f_tooga { border: 1px solid white; }
"
`;

exports[`/browserify.js factor-bundle should be supported 1`] = `
"require=(function(){function r(e,n,t){function o(i,f){if(!n[i]){if(!e[i]){var c=\\"function\\"==typeof require&&require;if(!f&&c)return c(i,!0);if(u)return u(i,!0);var a=new Error(\\"Cannot find module '\\"+i+\\"'\\");throw a.code=\\"MODULE_NOT_FOUND\\",a}var p=n[i]={exports:{}};e[i][0].call(p.exports,function(r){var n=e[i][1][r];return o(n||r)},p,p.exports,r,e,n,t)}return n[i].exports}for(var u=\\"function\\"==typeof require&&require,i=0;i<t.length;i++)o(t[i]);return o}return r})()({5:[function(require,module,exports){
module.exports = {
    \\"booga\\": \\"mcc4e2a8e1_booga\\",
    \\"looga\\": \\"mcc4e2a8e1_booga mcc4e2a8e1_looga\\",
    \\"$values\\": {
        \\"folder\\": \\"white\\",
        \\"one\\": \\"red\\",
        \\"two\\": \\"blue\\"
    }
};
},{\\"./packages/browserify/test/specimens/folder/folder.css\\":4}],3:[function(require,module,exports){
require(\\"../../folder/folder.css\\");

},{\\"../../folder/folder.css\\":4}],4:[function(require,module,exports){
module.exports = {
    \\"folder\\": \\"mcd19f1319_folder\\",
    \\"$values\\": {
        \\"folder\\": \\"white\\"
    }
};
},{}]},{},[]);
"
`;

exports[`/browserify.js factor-bundle should be supported 2`] = `
"/* packages/browserify/test/specimens/folder/folder.css */
.mcd19f1319_folder { margin: 2px; }
/* packages/browserify/test/specimens/local.css */
.mcc4e2a8e1_booga { background: green; }
"
`;

exports[`/browserify.js factor-bundle should be supported 3`] = `
"/* packages/browserify/test/specimens/start.css */
.mc1c78395f_booga { color: red; background: blue; }
.mc1c78395f_tooga { border: 1px solid white; }
"
`;

exports[`/browserify.js factor-bundle should output empty css files when asked 1`] = `
"/* packages/browserify/test/specimens/folder/folder.css */
.mcd19f1319_folder { margin: 2px; }
"
`;

exports[`/browserify.js factor-bundle should output empty css files when asked 2`] = `
"/* packages/browserify/test/specimens/local.css */
.mcc4e2a8e1_booga { background: green; }
/* packages/browserify/test/specimens/start.css */
.mc1c78395f_booga { color: red; background: blue; }
.mc1c78395f_tooga { border: 1px solid white; }
"
`;

exports[`/browserify.js factor-bundle should properly handle files w/o dependencies 1`] = `
"/* packages/browserify/test/specimens/folder/folder.css */
.mcd19f1319_folder { margin: 2px; }
/* packages/browserify/test/specimens/local.css */
.mcc4e2a8e1_booga { background: green; }
"
`;

exports[`/browserify.js factor-bundle should properly handle files w/o dependencies 2`] = `
"/* packages/browserify/test/specimens/simple.css */
.mc459e927d_wooga { color: red; }
"
`;

exports[`/browserify.js factor-bundle should support files w/o commonalities 1`] = `
"/* packages/browserify/test/specimens/simple.css */
.mc459e927d_wooga { color: red; }
"
`;

exports[`/browserify.js factor-bundle should support files w/o commonalities 2`] = `
"/* packages/browserify/test/specimens/blue.css */
.mcd53407d1_wooga { color: blue; }
"
`;

exports[`/browserify.js factor-bundle should support relative paths within factor-bundle files 1`] = `
"/* packages/browserify/test/specimens/folder/folder.css */
.mcd19f1319_folder { margin: 2px; }
/* packages/browserify/test/specimens/local.css */
.mcc4e2a8e1_booga { background: green; }
"
`;

exports[`/browserify.js factor-bundle should support relative paths within factor-bundle files 2`] = `
"/* packages/browserify/test/specimens/relative.css */
.mcdf61ec72_wooga {
    color: red;
    background: url(\\"../../../specimens/folder/to.png\\");
}
/* packages/browserify/test/specimens/start.css */
.mc1c78395f_booga { color: red; background: blue; }
.mc1c78395f_tooga { border: 1px solid white; }
"
`;
